--- a/Index.html
+++ b/Index.html
@@ -39,7 +39,7 @@
             <thead>
                 <tr>
                     <th>Picture</th>
-                    <th>Features</th>
+                    <th>Descripcion</th>
                     <th>Platform</th>
                     <th>Developer</th>
                 </tr>
