--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <a class="Nave" href="#Indies"> Indie Games</a>
             </nav>
             <div id="Portada"
-                style="width:100%; height: 400px; margin-left:auto; margin-right:auto; background-image:url(Ps5.png); background-size: cover; background-position: right;">
+                style="width:100%; height: 400px; margin-left:auto; margin-right:auto; background-image:url(ps5.png); background-size: cover; background-position: right;">
             </div>
 
         </header>
